@@ -82,6 +82,11 @@ option.
 .TP
 .B \-c
 Enable continue (ignore errors) mode.
+Multiple occorrences of
+.B \-c
+make
+.BR slapcat (8)
+try harder.
 .TP
 .BI \-d \ debug-level
 Enable debugging messages as defined by the specified
