@@ -3,9 +3,10 @@ OpenLDAP 2.4 Change Log
 OpenLDAP 2.4.24 Engineering
 	Added contrib/noopsrch for entry counting (ITS#6598)
 	Added slapadd attribute value checking (ITS#6592)
+	Added slapcat continue mode for problematic DBs (ITS#6482)
 	Added slapd-null back-config support (ITS#6624)
 	Added slapd-sql autocommit support (ITS#6612)
-	Addes slapd-sql support for long long keys (ITS#6617)
+	Added slapd-sql support for long long keys (ITS#6617)
 	Fixed liblber to not close invalid sockets (ITS#6585)
 	Fixed libldap dnssrv port format specifier (ITS#6644)
 	Fixed libldap EOF handling (ITS#6723)
